Add numbers to grid via Javascript
Added numbers to speed up the process of later adding the eventListener
to change the grid.

--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
 
             <button id="clear">Clear</button>
 
-            <div class="slide-container">
-                <input type="range" min="1" max="100" value="16" class="slider" id="myRange"></div>
-                <p>Value: <span id="demo"></span></p>
+            <button id="changeGrid">Change Grid</button>
+            <p id="demo">Current Grid:</p>
         </div>
 
     </div>
