Add color variations, add clear function
This file became more a deconstruction and study of another person'
code with some variations. Constructing it part by part has helped me
understand the process and reasons to choose some things.

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <div id="grid"></div>
 
         <div id="options">
-            <input type="radio" id="color" name="option" value="black">Black</input>
+            <input type="radio" id="color" name="option" value="black" checked="checked">Black</input>
 
             <input type="radio" id="random-color" name="option" value="random-color">Random Color</input>
 
-            <input type="radio"id="eraser" name="option" value="eraser">Eraser</input>
+            <input type="radio" id="eraser" name="option" value="eraser">Eraser</input>
 
             <button id="clear">Clear</button>
 
